# JavaScript

./: .browserslistrc  .gitignore  CLAUDE.md  Callback.js  LEARNING_ROADMAP.md  Loops.js  Math.js  README.md  TASK_MANAGER_PROJECT.md  arrays.js  closure.js  database_array_objects.js  events.js  fCC.js  index.css  index.html  middleware.js  nodemon.json  objects.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.zed/: settings.json
Assembly 6502/: LDX_register.ASM
CEC/: Hub.tsx  IshimuraDB.js  IshimuraDB.ts  index.html  package-lock.json  package.json
JWT_token/: JWT.js  server.js  user.js
Pipe/: Pipeline.js  Pipeline.test.js  Pipeline.ts  SWapiTypes.ts  index.html  package-lock.json  package.json  types.ts
Scripts/: Arrays.js  DataTypes.js  Loops.js  Math.js  Middleware.js  Recursion.js  index.html
UNIX/: commands_cheatsheet.md  data_file  multi_tab.js  multiplication_table.txt  names  names_1  names_2  nu.sh  phone_book  random_usernames  sort_random_usernames  sorted_names  sys_usrs  tail_file  trm_usrs  users
algorithms/: README.md
colorPalette/: index.html
crewings/: crewings_email.js  emails.txt  emails_filtration.js  ua_crewings_emails.js  ua_emails_unique.txt
football-game/: football.html  football.js
jest/: pow.js  pow.test.js
js trainee/: 1-basics.js  3-even.js  4-find-login.js  index.html
js_trainee/: alert_prompt_confirm.js  counters-iterations.js
junior-task/: index.html  styles.css
lazyloading/: index.html
mock/: mock.js  mock.ts  mockTypes.ts
mongoose/: mongoose.js  server.js
(+636 files in other folders)
