[project]
name = "javascript-repo-algorithms"
version = "0.1.0"
description = "Python algorithm pairs for JavaScript reference repo"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["algorithms"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = "venv311"
pythonVersion = "3.11"
include = ["algorithms", "js_trainee"]
exclude = ["**/node_modules", "**/__pycache__", "venv311"]

[tool.basedpyright]
venvPath = "."
venv = "venv311"
pythonVersion = "3.11"
include = ["algorithms", "js_trainee"]
exclude = ["**/node_modules", "**/__pycache__", "venv311"]
